# CppGram

./: .env.example  .gitignore  CMakeLists.txt  README.md
cppgram/: CMakeLists.txt
examples/: CMakeLists.txt  hello.cpp  phase1_smoke.cpp  test_bot.cpp
include/cppgram/: callback_query.hpp  chat.hpp  client.hpp  errors.hpp  filters.hpp  handlers.hpp  i_backend.hpp  keyboard.hpp  log.hpp  media.hpp  message.hpp  result.hpp  types.hpp  user.hpp
scripts/: run_test_bot.sh
src/backend/: client.cpp  log.cpp  td_conversions.hpp  tdlib_adapter.hpp
src/core/: entities.cpp  filters.cpp
src/entities/: hello.cpp
tests/: CMakeLists.txt  phase1_smoke.cpp
